# zeeker

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  MIGRATION-0.6.md  README.md  llms.txt  package.json  pyproject.toml  pytest.ini  zeeker.toml
.github/workflows/: deploy.yml  new_release.yml  publish-common.yml  publish-zeeker.yml  test.yml
examples/datasets/: README.md  pyproject.toml  zeeker.toml
examples/datasets/resources/: __init__.py  sample_data.py
examples/legal-news/: README.md  pyproject.toml  zeeker.toml
examples/legal-news/resources/: __init__.py  articles.py
public/: index.html
resources/: documents.py  searchable_docs.py
tests/: conftest.py  test_async.py  test_async_template_generation.py  test_cli.py  test_database_components.py  test_dev_dependencies_integration.py  test_enhanced_deploy.py  test_fragments.py  test_metadata.py  test_project.py  test_schema.py  test_zeeker.py
zeeker/: __init__.py  cli.py
zeeker/core/: database.py  deployer.py  project.py  resources.py  scaffolding.py  schema.py  templates.py  types.py
zeeker/core/database/: async_executor.py  builder.py  fts_processor.py  processor.py
zeeker/templates/: fragments.py.j2  resource.py.j2  resource_async.py.j2
