[project]
name = "test_fts_project"
version = "0.1.0"
description = "Zeeker database project for test_fts_project"
dependencies = ["zeeker"]
requires-python = ">=3.12"

[dependency-groups]
dev = ["black>=25.1.0", "ruff>=0.8.0"]

# Add project-specific dependencies here as needed:
# dependencies = [
#     "zeeker",
#     "requests",        # For HTTP API calls
#     "beautifulsoup4",  # For web scraping and HTML parsing
#     "pandas",          # For data processing and analysis
#     "lxml",            # For XML parsing
#     "pdfplumber",      # For PDF text extraction
#     "openpyxl",        # For Excel file reading
# ]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Focus on essential errors, warnings, and imports
ignore = ["E501"]  # Line too long (handled by black)
