[project]
name = "zeeker-legal-news"
version = "0.1.0"
description = "Legal news aggregator built with Zeeker"
requires-python = ">=3.12"

dependencies = [
    "zeeker>=0.6.0",
    "zeeker-common>=0.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = ["black>=25.1.0", "ruff>=0.8.0"]

[tool.uv.sources]
zeeker = { workspace = true }
zeeker-common = { workspace = true }

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
